<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg"
    android:orientation="vertical">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_ctv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/user_scan_face_cert" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_17"
        android:text="@string/user_input_real_name"
        android:textColor="@color/gray_8d8d8d"
        android:textSize="@dimen/text_size_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white_ffffff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="45dp"
                android:text="真实姓名"
                android:textColor="@color/black_2e332f"
                android:textSize="@dimen/text_size_16" />


            <com.pasc.lib.widget.ClearEditText
                android:id="@+id/user_activity_faceCertify_etRealname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@id/user_name"
                android:background="@color/white_ffffff"
                android:hint="@string/user_please_input_real_name"
                android:maxLength="18"
                android:singleLine="true"
                android:textColor="@color/user_certify_scanCertify_realNameColor"
                android:textColorHint="@color/gray_c7c7c7"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/dp_15"
            android:background="@color/gray_dddddd" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">

            <TextView
                android:id="@+id/user_idnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="45dp"
                android:text="身份证号"
                android:textColor="@color/black_2e332f"
                android:textSize="@dimen/text_size_16" />

            <com.pasc.lib.userbase.base.view.FormatEditText
                android:id="@+id/user_et_id_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@id/user_idnumber"
                android:background="@color/white_ffffff"
                android:hint="@string/user_please_input_identify"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/user_certify_scanCertify_idNumColor"
                android:textColorHint="@color/gray_c7c7c7"
                android:textSize="@dimen/text_size_16" />

        </RelativeLayout>


    </LinearLayout>


    <com.pasc.business.cert.view.CertSelectAgreementView
        android:id="@+id/user_btn_scan_face_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/user_btn_scan_face"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="25dp"
        android:alpha="0.3"
        android:background="@drawable/userbase_button_bg"
        android:enabled="false"
        android:text="开始人脸认证"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/text_size_17" />

</LinearLayout>
