<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg">

    <com.pasc.lib.userbase.base.view.CommonTitleView
        android:id="@+id/user_ctv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/user_bank_cert"
        app:titleSize="@dimen/dp_18"
        app:leftIcon="@drawable/ic_back_black"/>

    <TextView
        android:id="@+id/user_activity_bankCertify_tvRemind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_ctv_title"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_16"
        android:text="为了保证你的账号安全, 请完成以下认证"
        android:textColor="@color/gray_999999"
        android:textSize="@dimen/text_size_13" />

    <TextView
        android:id="@+id/user_activity_bankCertified_tvMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_activity_bankCertify_tvRemind"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/user_verification_code_send"
        android:textColor="@color/gray_333333"
        android:textSize="@dimen/text_size_16" />

    <RelativeLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_activity_bankCertified_tvMobileNo"
        android:layout_marginTop="15dp"
        android:background="@color/white_ffffff"
        android:gravity="center"
        android:paddingBottom="14dp"
        android:paddingLeft="15dp">

        <TextView
            android:id="@+id/user_tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="29dp"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:text="@string/user_get_code"
            android:textColor="@color/pasc_primary"
            android:textSize="16sp" />

        <com.pasc.lib.userbase.base.view.FormatEditText
            android:id="@+id/user_et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="19dp"
            android:layout_toLeftOf="@+id/user_tv_get_code"
            android:background="@null"
            android:cursorVisible="true"
            android:hint="@string/user_register_phone_verification_code"
            android:inputType="number"
            android:maxLength="7"
            android:textColor="@color/black_2e332f"
            android:textColorHint="@color/gray_c7c7c7"
            android:textSize="16sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/user_tv_next"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/user_layout"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="30dp"
        android:alpha="0.3"
        android:background="@drawable/userbase_button_bg"
        android:enabled="false"
        android:gravity="center"
        android:text="认证"
        android:textColor="@color/white_ffffff"
        android:textSize="@dimen/text_size_18" />

</RelativeLayout>